--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 </head>
 <body>
     <div class="container">
+        <header>
+            <h1>Code Quiz</h1>
+        </header>
+
         <div id="question">Question</div>
+        <ul>
+            <li>
+                <button class="btn">Answer1</button>
+            </li>
+            <li>
+                <button class="btn">Answer2</button>
+            </li>
+            <li>
+                <button class="btn">Answer3</button>
+            </li>
+            <li>
+                <button class="btn">Answer4</button>
+            </li>
+        </ul>
+        <div class="controls">
+            <button id="start-btn" class="start-btn btn hide">START</button>
+        </div>
     </div>
     
 </body>
