added a submit btn for the answers

--- a/index.html
+++ b/index.html
@@ -13,25 +13,30 @@
             <h1>Code Quiz</h1>
         </header>
 
-        <div id="question">Question</div>
-        <ul>
-            <li>
-                <button class="btn">Answer1</button>
-            </li>
-            <li>
-                <button class="btn">Answer2</button>
-            </li>
-            <li>
-                <button class="btn">Answer3</button>
-            </li>
-            <li>
-                <button class="btn">Answer4</button>
-            </li>
-        </ul>
-        <div class="controls">
-            <button id="start-btn" class="start-btn btn hide">START</button>
+        <div class="quiz-container hide">
+            <div id="question">Question</div>
+                <div id="answers-btn">
+                    <ul>
+                        <li>
+                        <button class="btn">Answer1</button>
+                        </li>
+                        <li>
+                        <button class="btn">Answer2</button>
+                        </li>
+                        <li>
+                        <button class="btn">Answer3</button>
+                        </li>
+                        <li>
+                        <button class="btn">Answer4</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>        
+            <div class="control">
+                <button id="start-btn" class="start-btn btn">START</button>
+                <button id="submit-btn" class="submit-btn btn hide">Submit Answer</button>
+            </div>
         </div>
-    </div>
     
 </body>
 </html>
